--- a/demo.css
+++ b/demo.css
@@ -103,7 +103,7 @@ h1 {
 }
 
 .carousel-inner>.item:first-child {
-  z-index: 1998; 
+  z-index: 1998;
 }
 
 .carousel-inner>.item.active {
@@ -115,7 +115,7 @@ h1 {
 }
 
 [drag-to-dismiss]{
-  transform: translate(0,0); /* NOTE: this is required to prevent mobile webkit issues */ 
+  transform: translate(0,0); /* NOTE: this is required to prevent mobile webkit issues */
   -webkit-user-drag: none;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -148,7 +148,7 @@ h1 {
 }
 
 .list-group-item-home {
-  padding: 20px; 
+  padding: 20px;
 }
 
 pre {
@@ -157,4 +157,13 @@ pre {
 
 input.scrollable-header {
   border-bottom: 3px solid #ccc;
+}
+
+@media only screen
+and (max-width : 768px) {
+  /* Styles */
+  div.contenidos-items a {
+    font-size: 20px;
+  }
+
 }
