arreglamos textos paginas, agregamos link colaborá

--- a/demo.css
+++ b/demo.css
@@ -159,6 +159,10 @@ input.scrollable-header {
   border-bottom: 3px solid #ccc;
 }
 
+div.faq-answer {
+  text-align: justify;
+}
+
 @media only screen
 and (max-width : 768px) {
   /* Styles */
