--- a/demo.css
+++ b/demo.css
@@ -198,6 +198,37 @@ a.app-name, a.app-name:hover, a.app-name:visited {
   text-decoration: none;
 }
 
+a.footer {
+  text-align: center;
+  margin-bottom: 0;
+  font-weight: 400;
+  vertical-align: middle;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  /*white-space: nowrap;*/
+  padding: 6px 12px;
+  font-size: 14px;
+  /*line-height: 1.42857143;*/
+  border-radius: 4px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  background: 0 0;
+  border: 0;
+  line-height: 25px;
+  padding-top: 0;
+  padding-bottom: 0;
+  color: #007aff;
+  text-transform: uppercase;
+}
+
+.list-group {
+  margin-bottom: 0px;
+}
+
 @media only screen
 and (max-width : 768px) {
   /* Styles */
