--- a/demo.css
+++ b/demo.css
@@ -198,7 +198,8 @@ a.app-name, a.app-name:hover, a.app-name:visited {
   text-decoration: none;
 }
 
-a.footer {
+a.footer, a.footer:hover, a.footer:visited {
+  text-decoration: none;
   text-align: center;
   margin-bottom: 0;
   font-weight: 400;
