--- a/demo.css
+++ b/demo.css
@@ -231,8 +231,14 @@ a.footer, a.footer:hover, a.footer:visited {
 }
 
 .list-group-item .filter-text {
+  font-weight: bold;
   color: #fff;
   background-color: #0062cc;
+  padding: .2em .3em .2em;
+  margin: 0em .1em 0em;
+  text-align: center;
+  white-space: nowrap;
+  border-radius: .25em;
 }
 
 @media only screen
